# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transition_door"
version = "1.0.0"
description = ""
# readme = "README.md"
authors = [{ name = "Nicolas DEBRAY", email = "nicknolt@yahoo.fr" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
# keywords = ["feed", "reader", "tutorial"]
dependencies = [
#         "obsub",
#         "paho-mqtt >= 1.6.1",
# #     "feedparser >= 5.2.0",
# #     "html2text",
# #     'tomli; python_version < "3.11"',
]
requires-python = ">=3.8"

# [project.optional-dependencies]
# dev = ["black", "bumpver", "isort", "pipython -m pip install pip-toolsp-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/nicknolt/transition_door"

# [project.scripts]
# realpython = "reader.__main__:main"